Public page improvements.   Manage Comments filtering and detail modal.

--- a/modules/activities/client/views/activity-eao-partials/activity-eao-tasks.html
+++ b/modules/activities/client/views/activity-eao-partials/activity-eao-tasks.html
@@ -19,7 +19,7 @@
 	<ul class="list-unstyled">
 		<li><label class="control-label">
 			Click to Select<br/>Shift+Click to change status<br/>Alt+Click for Not Applicable<br/>
-			<a href x-modal-add-custom-task x-activity="actTasks.activity" x-tasks="actTasks.tasks">Add Custom Task</a>
+			<a href x-modal-add-custom-task x-activity="actTasks.activity" x-tasks="actTasks.tasks" x-user-is="admin">Add Custom Task</a>
 		</label></li>
 	</ul>
 </div>
