Added input validation to the public comment form.

--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -7,53 +7,73 @@
 	<p>By submitting a comment you agree to...</p>
 </div>
 
-<div class="modal-body" ng-if="publicComment.step === 2">
-	<div class="form-group">
-		<label for="publiccomment" class="control-label">Your Comment</label>
-		<textarea id="publiccomment" class="form-control" rows="6" ng-model="publicComment.data.comment" required></textarea>
-	</div>
-	<div class="row">
-		<div class="form-group col-sm-6">
-			<label for="name" class="control-label">Your Name</label>
-			<input type="input" id="name" class="form-control" ng-model="publicComment.data.author" required/>
+
+<form name="publicCommentForm" ng-submit="publicComment.send(publicCommentForm.$valid)" novalidate autocomplete="off">
+
+	<div class="modal-body" ng-if="publicComment.step === 2">
+		<div class="form-group" show-errors>
+			<label for="publiccomment" class="control-label">Your Comment</label>
+			<textarea id="publiccomment" name="publiccomment" class="form-control" rows="6" ng-model="publicComment.data.comment" required></textarea>
+			
+			<div ng-messages="publicCommentForm.publiccomment.$error" role="alert">
+				<p class="help-block error-text small" ng-message="required"><em>A comment is required.</em></p>
+			</div>
+		
 		</div>
-		<div class="form-group col-sm-6">
-			<label for="location" class="control-label">Your Location</label>
-			<input type="input" id="location" class="form-control" ng-model="publicComment.data.location" required/>
+		<div class="row">
+			<div class="form-group col-sm-6" show-errors>
+				<label for="name" class="control-label">Your Name</label>
+				<input type="input" id="name" name="name" class="form-control" ng-model="publicComment.data.author" required/>
+
+				<div ng-messages="publicCommentForm.name.$error" role="alert">
+					<p class="help-block error-text small" ng-message="required"><em>Your Name is required.</em></p>
+				</div>
+
+			</div>
+			<div class="form-group col-sm-6" show-errors>
+				<label for="location" class="control-label">Your Location</label>
+				<input type="input" id="location" name="location" class="form-control" ng-model="publicComment.data.location" required/>
+
+				<div ng-messages="publicCommentForm.location.$error" role="alert">
+					<p class="help-block error-text small" ng-message="required"><em>Your Location is required.</em></p>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="checkbox well well-sm">
+	     	<label>
+	     		<input type="checkbox" ng-model="publicComment.data.displayName"> Show my name and location on the public site.
+	     	</label>
+	     </div>
+
+
+		<a href ng-click="publicComment.form.showDocuments = true" ng-show="!publicComment.form.showDocuments">Click here to upload documents and images.</a>
+		<div ng-show="publicComment.form.showDocuments">
+			<tmpl-documents-upload-general x-project="publicComment.project" x-type="comment" x-hide-upload-button="true" x-parent-id="publicComment.data._id"></tmpl-documents-upload-general>
 		</div>
 	</div>
 
-	<div class="checkbox well well-sm">
-     	<label>
-     		<input type="checkbox" ng-model="publicComment.data.displayName"> Show my name and location on the public site.
-     	</label>
-     </div>
-
-
-	<a href ng-click="publicComment.form.showDocuments = true" ng-show="!publicComment.form.showDocuments">Click here to upload documents and images.</a>
-	<div ng-show="publicComment.form.showDocuments">
-		<tmpl-documents-upload-general x-project="publicComment.project" x-type="comment" x-hide-upload-button="true" x-parent-id="publicComment.data._id"></tmpl-documents-upload-general>
+	<div class="modal-body" ng-if="publicComment.step === 3">
+		<h3>Thank you for your comment</h3>
+		<label class="control-label">What happens next?</label>
+		<p>Within 7 days comment will be published to the public project record and then responded to by the proponent a short time later.</p>
+		<p>All published comments can be found in the lower section of this page.</p>
 	</div>
-</div>
-
-<div class="modal-body" ng-if="publicComment.step === 3">
-	<h3>Thank you for your comment</h3>
-	<label class="control-label">What happens next?</label>
-	<p>Within 7 days comment will be published to the public project record and then responded to by the proponent a short time later.</p>
-	<p>All published comments can be found in the lower section of this page.</p>
-</div>
 
 
-<div class="modal-footer" ng-if="publicComment.step === 1">
-	<button class="btn btn-default" type="button" ng-click="publicComment.cancel()">Cancel</button>
-	<button class="btn btn-primary" type="button" ng-click="publicComment.step = 2">Continue</button>
-</div>
+	<div class="modal-footer" ng-if="publicComment.step === 1">
+		<button class="btn btn-default" type="button" ng-click="publicComment.cancel()">Cancel</button>
+		<button class="btn btn-primary" type="button" ng-click="publicComment.step = 2">Continue</button>
+	</div>
 
-<div class="modal-footer" ng-if="publicComment.step === 2">
-	<button class="btn btn-default" type="button" ng-click="publicComment.cancel()">Cancel</button>
-	<button class="btn btn-primary" type="button" ng-click="publicComment.send()">Send</button>
-</div>
+	<div class="modal-footer" ng-if="publicComment.step === 2">
+		<button class="btn btn-default" type="button" ng-click="publicComment.cancel()">Cancel</button>
+		<button class="btn btn-primary" type="submit">Send</button>
+	</div>
 
-<div class="modal-footer" ng-if="publicComment.step === 3">
-	<button class="btn btn-primary" type="button" ng-click="publicComment.ok()">Close</button>
-</div>
+	<div class="modal-footer" ng-if="publicComment.step === 3">
+		<button class="btn btn-primary" type="button" ng-click="publicComment.ok()">Close</button>
+	</div>
+
+</form>
