--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -12,7 +12,7 @@
 
       <form name="userForm" ng-submit="loginPanel.signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
 
-        <div class="form-group">
+        <div class="form-group" show-errors>
             <label for="username" class="control-label">Username</label>
             <input required id="username" type="text" name="username" placeholder="Username" class="form-control" ng-model="loginPanel.credentials.username"/>
             <div ng-messages="userForm.username.$error" role="alert">
@@ -20,7 +20,7 @@
            </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" show-errors>
           <label for="password" class="control-label">Password</label>
           <input required id="password" type="password" name="password" placeholder="Password" class="form-control" ng-model="loginPanel.credentials.password"/>
           <div ng-messages="userForm.password.$error" role="alert">
