--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -3,8 +3,12 @@
 </div>
 
 <div class="modal-body" ng-if="publicComment.step === 1">
-	<h3>Disclaimer</h3>
-	<p>By submitting a comment you agree to...</p>
+	<h3>Disclosure and Use of Personal Information for Submissions</h3>
+	<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre</a> (ePIC).</p>
+	<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy</a> [PDF].</p>
+	<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the projects’ Environmental Assessment (EA) process.</p>
+	<p>Although EAO requires that you provide your name and city/town when making a comment, having your name displayed with your comment is optional. To have your name displayed with your comment, please select the Yes option on the form above.</p>
+	<p>All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
 </div>
 
 
